test/should-fail/常量-3.j
globals
    integer i = 1
endglobals

constant function test takes nothing returns nothing
    set i = 2
endfunction
